--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -1,3 +1,59 @@
 body {
     border:none;
 }
+
+.btn {
+    margin-right: 8px;
+}
+
+.td-label {
+    width:0.1%;
+    white-space: nowrap;
+    font-weight: 600;
+}
+
+.content-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+
+    .person-container {
+        flex: 1 1 auto;
+        display: flex;
+        width: 100%;
+        padding: 10px;
+
+        @media (min-width: 768px) {
+            max-width: 50%;
+        }
+
+        @media (min-width: 1024px) {
+            max-width: 25%;
+        }
+
+        .person {
+            flex: 1 1 auto;
+            align-items: center;
+            overflow: hidden;
+            width: 100%;
+            padding: 10px;
+            background-color: #efefef;
+            border: 1px solid #ddd;
+            text-align: center;
+            cursor: pointer;
+
+            &:hover {
+                text-decoration: none;
+                box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+            }
+
+            &.add {
+                border: 1px dashed #ccc;
+                background-color: white;
+                display: flex;
+                justify-content: center;
+                font-size: 20px;
+            }
+        }
+    }
+}
