--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,7 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome';
+@import 'node_modules/@fortawesome/fontawesome-free/scss/regular';
+@import 'node_modules/@fortawesome/fontawesome-free/scss/solid';
+@import 'node_modules/@fortawesome/fontawesome-free/scss/brands';
 @import "variables";
 @import "main";
