--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -2,14 +2,34 @@ body {
     border:none;
 }
 
+.container {
+    max-width: 768px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .btn {
     margin-right: 8px;
 }
 
-.td-label {
-    width:0.1%;
-    white-space: nowrap;
+.initials {
+    display: block;
+    height: 110px;
+    width: 110px;
+    border: 4px solid #787878;
+    padding: 0;
+    text-align: center;
+    line-height: 110px;
+    vertical-align: middle;
+    border-radius: 50%;
+    font-size: 40px;
     font-weight: 600;
+}
+
+.container-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .content-container {
@@ -45,6 +65,99 @@ body {
             &:hover {
                 text-decoration: none;
                 box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+            }
+
+            &.add {
+                border: 1px dashed #ccc;
+                background-color: white;
+                display: flex;
+                justify-content: center;
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+.details-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+
+    .detail-container {
+        flex: 1 1 auto;
+        display: flex;
+        width: 100%;
+        max-width: 25%;
+        padding: 10px;
+
+        @media (min-width: 768px) {
+            max-width: 25%;
+        }
+
+        // @media (min-width: 1024px) {
+        //     max-width: 25%;
+        // }
+
+        .detail {
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            overflow: hidden;
+            width: 100%;
+            padding: 10px;
+            background-color: #efefef;
+            border: 1px solid #ddd;
+            text-align: center;
+            cursor: pointer;
+
+            .value {
+                display: block;
+                height: 80px;
+                font-size: 80px;
+                line-height: 80px;
+                line-height: normal;
+                vertical-align: middle;
+                margin-bottom: 20px;
+            }
+
+            .eye-color-brown {
+                color: #634e34;
+            }
+
+            .eye-color-blue {
+                color: #2e536f;
+            }
+
+            .eye-color-green {
+                color: #3d671d;
+            }
+
+            .eye-color-hazel {
+                color: #497665;
+            }
+
+            .label {
+                font-size: 14px;
+            }
+
+            &:hover {
+                text-decoration: none;
+                box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+            }
+
+            .initials {
+                display: block;
+                height: 60px;
+                width: 60px;
+                border: 1px solid #f00;
+                padding: 0;
+                text-align: center;
+                line-height: 60px;
+                vertical-align: middle;
+                border-radius: 50%;
+                font-size: 28px;
+                font-weight: 600;
             }
 
             &.add {
