--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -2,6 +2,11 @@ body {
     border:none;
 }
 
+h1 {
+    text-align: center;
+    font-size: 54px;
+}
+
 .container {
     max-width: 768px;
     padding-top: 20px;
@@ -16,6 +21,9 @@ body {
     display: block;
     height: 110px;
     width: 110px;
+    min-width: 110px;
+    min-height: 110px;
+    overflow: hidden;
     border: 4px solid #787878;
     padding: 0;
     text-align: center;
@@ -47,25 +55,17 @@ body {
             max-width: 50%;
         }
 
-        @media (min-width: 1024px) {
-            max-width: 25%;
-        }
-
         .person {
             flex: 1 1 auto;
+            display: flex;
             align-items: center;
             overflow: hidden;
             width: 100%;
             padding: 10px;
-            background-color: #efefef;
-            border: 1px solid #ddd;
-            text-align: center;
-            cursor: pointer;
-
-            &:hover {
-                text-decoration: none;
-                box-shadow: 0 5px 5px rgba(0,0,0,0.2);
-            }
+            //background-color: #efefef;
+            //border: 1px solid #ddd;
+            //text-align: center;
+            //cursor: pointer
 
             &.add {
                 border: 1px dashed #ccc;
@@ -74,11 +74,27 @@ body {
                 justify-content: center;
                 font-size: 20px;
             }
+
+            .summary {
+                text-align: left;
+                margin-left:10px;
+
+                h4,h5 {
+                    margin: 5px 0px;
+                }
+
+                .learn-more,
+                .learn-more:hover {
+                    color: inherit;
+                    text-decoration: none;
+                }
+            }
         }
     }
 }
 
 .details-container {
+    flex: 1 1 auto;
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
@@ -94,10 +110,6 @@ body {
             max-width: 25%;
         }
 
-        // @media (min-width: 1024px) {
-        //     max-width: 25%;
-        // }
-
         .detail {
             flex: 1 1 auto;
             display: flex;
@@ -106,19 +118,22 @@ body {
             overflow: hidden;
             width: 100%;
             padding: 10px;
-            background-color: #efefef;
             border: 1px solid #ddd;
             text-align: center;
-            cursor: pointer;
+            border-radius: 10px;
 
             .value {
                 display: block;
                 height: 80px;
-                font-size: 80px;
+                font-size: 64px;
                 line-height: 80px;
-                line-height: normal;
                 vertical-align: middle;
                 margin-bottom: 20px;
+
+                img {
+                    height: 64px;
+                    width: 64px;
+                }
             }
 
             .eye-color-brown {
@@ -141,32 +156,24 @@ body {
                 font-size: 14px;
             }
 
-            &:hover {
-                text-decoration: none;
-                box-shadow: 0 5px 5px rgba(0,0,0,0.2);
-            }
-
-            .initials {
-                display: block;
-                height: 60px;
-                width: 60px;
-                border: 1px solid #f00;
-                padding: 0;
-                text-align: center;
-                line-height: 60px;
-                vertical-align: middle;
-                border-radius: 50%;
-                font-size: 28px;
-                font-weight: 600;
-            }
-
-            &.add {
-                border: 1px dashed #ccc;
-                background-color: white;
-                display: flex;
-                justify-content: center;
-                font-size: 20px;
+            .label {
+                text-transform: capitalize;
+                color: inherit;
             }
         }
     }
+}
+
+.list-group > .list-group-item {
+    border: none !important;
+    padding: 0px;
+}
+
+.last-updated {
+    padding: 20px;
+    color: #999;
+}
+
+.py-4 {
+    padding: 20px 0px;
 }
